force-app/main/default/objects/Escalation__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Case Category</description>
    <formula>TEXT(Case__r.Category__c)</formula>
    <inlineHelpText>Case Category</inlineHelpText>
    <label>Case Category</label>
    <type>Text</type>
</CustomField>