force-app/main/default/objects/Escalation__c/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <description>Case Sub-Category</description>
    <formula>TEXT(Case__r.Sub_Category__c)</formula>
    <inlineHelpText>Case Sub-Category</inlineHelpText>
    <label>Case Sub-Category</label>
    <type>Text</type>
</CustomField>