force-app/main/default/objects/Escalation__c/fields/Compromised_PII_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compromised_PII_Reason__c</fullName>
    <inlineHelpText>If you selected &quot;Yes&quot; that you believe PII was compromised, please enter a reason.</inlineHelpText>
    <label>Compromised PII Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>