force-app/main/default/objects/Escalation__c/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>Connected Partner pulled from Account.</description>
    <formula>TEXT(Escalated_Account__r.Connected_Partner__c)</formula>
    <inlineHelpText>Connected Partner pulled from Account.</inlineHelpText>
    <label>Connected Partner</label>
    <type>Text</type>
</CustomField>