force-app/main/default/objects/Escalation__c/fields/Connected_Partner_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is connected partner aware of, and/or involved in this escalation? (i.e. Principal)</description>
    <inlineHelpText>Is connected partner aware of, and/or involved in this escalation? (i.e. Principal)</inlineHelpText>
    <label>Connected Partner Involvement</label>
    <type>Checkbox</type>
</CustomField>