force-app/main/default/objects/Escalation__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <formula>Escalation_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>