force-app/main/default/objects/Escalation__c/fields/Date_of_Fraud_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Fraud_Incident__c</fullName>
    <description>Date suspected fraud occurred</description>
    <inlineHelpText>Date suspected fraud occurred</inlineHelpText>
    <label>Date of Fraud Incident</label>
    <type>Date</type>
</CustomField>