force-app/main/default/objects/Escalation__c/fields/Date_of_Fraud_Notification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Fraud_Notification__c</fullName>
    <description>Date we were notified of suspected fraud.</description>
    <inlineHelpText>Date we were notified of suspected fraud.</inlineHelpText>
    <label>Date of Fraud Notification</label>
    <type>Date</type>
</CustomField>