force-app/main/default/objects/Escalation__c/fields/De_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>De_Escalation_Date__c</fullName>
    <label>De-Escalation Date</label>
    <type>DateTime</type>
</CustomField>