force-app/main/default/objects/Escalation__c/fields/De_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>De_Escalation_Notes__c</fullName>
    <label>De-Escalation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>