force-app/main/default/objects/Escalation__c/fields/Escalated_Account__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>