force-app/main/default/objects/Escalation__c/fields/Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>