force-app/main/default/objects/Escalation__c/fields/Escalation_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact_Role__c</fullName>
    <formula>TEXT( Escalation_Contact__r.Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact role of escalation contact.</inlineHelpText>
    <label>Escalation Contact Role</label>
    <type>Text</type>
</CustomField>