force-app/main/default/objects/Escalation__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saver</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Connected Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>