force-app/main/default/objects/Escalation__c/fields/Escalator__c.field-meta.xml
<CustomField>
    <fullName>Escalator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>