force-app/main/default/objects/Escalation__c/fields/Fraud_Suspected__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Suspected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If fraud is suspected, check this box.</description>
    <inlineHelpText>If fraud is suspected, check this box.</inlineHelpText>
    <label>Fraud Suspected</label>
    <type>Checkbox</type>
</CustomField>