force-app/main/default/objects/Escalation__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>