force-app/main/default/objects/Escalation__c/fields/Monetary_Implication__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Implication__c</fullName>
    <inlineHelpText>Was a distribution or loan fraudulently processed?</inlineHelpText>
    <label>Monetary Implication?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>