force-app/main/default/objects/Escalation__c/fields/PII_Compromised__c.field-meta.xml
<CustomField>
    <fullName>PII_Compromised__c</fullName>
    <inlineHelpText>If you have any reason to believe PII was compromised, select &quot;Yes&quot;.</inlineHelpText>
    <label>PII Compromised?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>