force-app/main/default/objects/Escalation__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <description>Service Option pulled from Plan.</description>
    <formula>TEXT(Plan__r.Service_Option__c)</formula>
    <inlineHelpText>Service Option pulled from Plan.</inlineHelpText>
    <label>Service Option</label>
    <type>Text</type>
</CustomField>